# CPP-PLAYGROUND

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  dockerfile  readme.md  run-docker.sh  run.sh
ThreadSubmodule/: CMakeLists.txt
ThreadSubmodule/inc/: MessageQueue.hpp  TaskExample.hpp  TaskWorker.hpp
ThreadSubmodule/src/: TaskExample.cpp
inc/: BitOperations.hpp  ConstructorClass.hpp  ExampleClass.hpp  Ringbuffer.h
src/: Ringbuffer.c  TaskUsage.cpp  main.cpp  stringview.cpp
tests/: AnonymousStruct.cpp  BitOperationsTests.cpp  CMakeLists.txt  ConstructorClassTests.cpp  RingbufferTests.cpp  TwosComplementTests.cpp  main.cpp  roundTest.cpp
